--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@brootal/mongo-connector",
+  "name": "@brootal/mongoose",
   "version": "0.1.2",
   "description": "",
   "main": "dist/index.js",
